--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ version = "0.0.0"
 authors = ["Jorge Aparicio <japaricious@gmail.com>"]
 
 [dev-dependencies.quickcheck]
-git = "https://github.com/burntsushi/quickcheck"
+git = "https://github.com/japaric/quickcheck"
 
 [dev-dependencies.quickcheck_macros]
-git = "https://github.com/burntsushi/quickcheck"
+git = "https://github.com/japaric/quickcheck"
 
 [profile.dev]
 debug = false
