--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ authors = ["Jorge Aparicio <japaricious@gmail.com>"]
 git = "https://github.com/japaric/cast.rs"
 
 [dev-dependencies.quickcheck]
-branch = "rustup"
-git = "https://github.com/japaric/quickcheck"
+git = "https://github.com/burntsushi/quickcheck"
 
 [dev-dependencies.quickcheck_macros]
-branch = "rustup"
-git = "https://github.com/japaric/quickcheck"
+git = "https://github.com/burntsushi/quickcheck"
+
+[profile.test]
+debug = false
