adapt to upstream changes in cast and float(y)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Jorge Aparicio <japaricious@gmail.com>"]
 [dependencies.cast]
 git = "https://github.com/japaric/cast.rs"
 
-[dependencies.float]
+[dependencies.floaty]
 git = "https://github.com/japaric/float.rs"
 
 [dev-dependencies.quickcheck]
